desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
/* ... */
stackswitcher > button.needs-attention > label,
stackswitcher > button.needs-attention > image,
.stack-switcher > .button.needs-attention > GtkLabel,
.stack-switcher > .button.needs-attention > GtkImage {
	animation: needs_attention 150ms ease-in;
	background-color: @theme_bg_color; /* FIXME: ? */
	background-size: 6px 6px, 6px 6px;
	background-repeat: no-repeat;
	background-position: right 3px, right 4px; 
}

stackswitcher > button.needs-attention > label:backdrop,
stackswitcher > button.needs-attention > image:backdrop,
.stack-switcher > .button.needs-attention > GtkLabel:backdrop,
.stack-switcher > .button.needs-attention > GtkImage:backdrop {
	background-size: 6px 6px, 0 0; 
}

stackswitcher > button.needs-attention > label:dir(rtl),
stackswitcher > button.needs-attention > image:dir(rtl),
.stack-switcher > .button.needs-attention > GtkLabel:dir(rtl),
.stack-switcher > .button.needs-attention > GtkImage:dir(rtl) {
	background-position: left 3px, left 4px; 
}

stackswitcher > button.needs-attention:active > label,
stackswitcher > button.needs-attention:active > image,
stackswitcher > button.needs-attention:checked > label,
stackswitcher > button.needs-attention:checked > image,
.stack-switcher > .button.needs-attention:active > GtkLabel,
.stack-switcher > .button.needs-attention:active > GtkImage,
.stack-switcher > .button.needs-attention:checked > GtkLabel,
.stack-switcher > .button.needs-attention:checked > GtkImage {
	animation: none;
	background-image: none; 
}

/*****************
 * Notebooks and *
 * tabs          *
 *****************/

notebook,
.notebook {
    padding: 0;
    background-clip: border-box;
    border-style: solid;
    border-color: @borders;
    border-width: 0px;
    background-color: shade (@theme_bg_color, 1.1);
/*    -GtkNotebook-initial-gap: 0; */
/*    -GtkNotebook-arrow-spacing: 5; deprecated */
/*    -GtkNotebook-tab-curvature: 0;
    -GtkNotebook-tab-overlap: 0;
    -GtkNotebook-has-tab-gap: false;
    -GtkWidget-focus-padding: 0;
    -GtkWidget-focus-line-width: 0;*/
}

notebook :hover,
.notebook :hover {
    -gtk-icon-effect: highlight; /* deprecated, but ignored */
    color: @theme_fg_color;
}

frame notebook header.top,
.notebook.frame.top {
    border-width: 0px 1px 1px 1px;
}

frame notebook header.bottom,
.notebook.frame.bottom {
    border-width: 1px 1px 0px 1px;
}

.frame notebook header.left,
.notebook.frame.left {
    border-width: 1px 1px 1px 0px;
}

.frame notebook header.right,
.notebook.frame.right {
    border-width: 1px 0px 1px 1px;
}

notebook header,
.notebook.header {
    background-image: linear-gradient(to bottom,
                                      shade(@theme_bg_color, 0.96),
                                      shade(@theme_bg_color, 1.0));
    border-width: 0px;
    box-shadow: inset 0 1px 0 0 alpha(@borders, 0.4), inset 0 -1px 0 0 alpha(@borders, 1.0);
}

notebook header.top,
.notebook.header.top {
    border-width: 1px;
    border-radius: 4px 4px 0px 0px;
}

notebook header.bottom,
.notebook.header.bottom {
    border-width: 1px;
    border-radius: 0px 0px 4px 4px;
}

notebook header.left,
.notebook.header.left {
    border-width: 1px;
    border-radius: 4px 0px 0px 4px;
}

notebook header.right,
.notebook.header.right {
    border-width: 1px;
    border-radius: 0px 4px 4px 0px;
}

notebook viewport,
.notebook GtkViewport {
    background-color: @theme_base_color;
    border-width: 0px;
}

notebook header tab,
.notebook tab {
    border-color: transparent;
    border-width: 0px;
    background-image: none;
    background-color: transparent;
}

notebook header tab label,
.notebook tab GtkLabel {
    color: mix (@theme_fg_color, @theme_bg_color, 0.40);
    font-weight: normal;
}

notebook header .prelight-page,
notebook header .prelight-page label,
.notebook .prelight-page,
.notebook .prelight-page GtkLabel {
    color: mix (@theme_fg_color, @theme_bg_color, 0.15);
}

notebook header .active-page,
notebook header tab .active-page label,
.notebook .active-page,
.notebook tab .active-page GtkLabel {
    color: @theme_fg_color;
}

/* horizontal tabs */

notebook header.top tab,
notebook header.bottom tab,
.notebook tab.top,
/* wtf, why this doesn't work? */
.notebook tab.bottom {
    padding: 6px 21px 4px;
    border-style: solid;
    border-width: 0px 1px 0px 1px;
    border-color: transparent;
}

/* workaround for wtf */
.notebook tab.bottom:active {
    padding: 3px 21px 7px 21px;
}

notebook header.top tab:active,
notebook header.top tab:active:hover,
.notebook tab.top:active,
.notebook tab.top:active:hover {
    background-image: linear-gradient(to bottom,
                                      shade(@theme_bg_color, 1.18),
                                      shade(@theme_bg_color, 1.1));
    border-radius: 4px 4px 0px 0px;
    border-width: 0px 1px 0px 1px;
    border-style: solid;
    border-color: @borders;
    box-shadow: none;
}

notebook header.top tab:hover,
.notebook tab.top:hover {
    background-image: linear-gradient(to bottom,
                                      alpha(@theme_base_color, 0.0),
                                      alpha(@theme_base_color, 0.3));
    border-radius: 0px;
    border-width: 0px 1px 0px 1px;
    border-style: solid;
    border-color: @borders;
}

notebook header.bottom tab:active,
notebook header.bottom tab:active:hover,
.notebook tab.bottom:active,
.notebook tab.bottom:active:hover {
    background-image: linear-gradient(to top,
                                      shade(@theme_bg_color, 1.18),
                                      shade(@theme_bg_color, 1.1));
    border-radius: 0 0 4px 4px;
    border-style: solid;
    border-width: 0px 1px 1px 1px;
    border-color: @borders;
    box-shadow: none;
}
/* ... */

